--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
-  <title>Macau Gambling Market (CORIS) Sports Betting</title>
+  <title>Corisbet Sports Betting</title>
 </head>
 
 <body>
